[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daccs_client"
authors = [{name = "Deepak Chandan", email = "dchandan@cs.toronto.edu"}]
description = "A python client to access information about the DACCS"
version = "0.0.1"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["daccs_client"]