[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [{name = "Deepak Chandan", email = "dchandan@cs.toronto.edu"}]
description = "A python client to access information about the Marble climate infomatics network"
name = "marble_client"
requires-python = ">=3.9"
version = "0.0.1"

[tool.setuptools]
packages = ["marble_client"]

[tool.black]
line-length = 120
